# Calculator

./: .gitignore  CMakeLists.txt  Makefile  README.md  hodnotenie.txt  main.cpp  skutocnost.txt
math_lib/: mathematical_library.cpp  mathematical_library.h
plan/: xlahvi00_xsvehl09_xkrajc21_xsasak01.txt
profiling/: callgrind.out.11294  callgrind.out.11347  callgrind.out.11369
src/: CMakeLists.txt  Doxyfile  cmake_uninstall.cmake  imageresources.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/GUI/Calculator/: Calculator.pro  imageresources.qrc  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.h.autosave  mainwindow.ui  mainwindow.ui.autosave
src/GUI/build-Calculator-Desktop_Qt_5_11_0_MinGW_32bit-Debug/: .qmake.stash  Calculator_resource.rc  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
src/GUI/build-Calculator-Desktop_Qt_5_11_0_MinGW_32bit-Debug/debug/: moc_mainwindow.cpp  qrc_imageresources.cpp
src/dependencies/linuxlib/: libpcre2-16.so.0
src/math_lib/: mathematical_library.cpp  mathematical_library.h
src/standard_deviation/: standard_deviation.cpp  standard_deviation.h  standard_deviation_main.cpp
src/tests/: CMakeLists.txt  mathematical_library_tests.cpp  standard_deviation_tests.cpp
tests/: mathematical_library_tests.cpp
